--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,60 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Борьба с вредными привычками</title>
-
+	<title>Нет вредным привычкам</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body id="qq">
+<body>
 	
+	<nav class="navbar navbar-dark bg-dark">
+	  <div class="container">
+	    <a class="navbar-brand" href="#"><img src="img/logo.svg" alt="Логотип"></a>
+	    <button class="navbar-toggler" type="button">
+	      <img src="img/add.svg" alt="Добавить">
+	    </button>
+	  </div>
+	</nav>
 
+	<main class="container">
+
+	  <div class="my-3 p-3 bg-white rounded shadow-sm all-cont">
+	      <h6 class="border-bottom pb-2 mb-0">Наши вредные привычки</h6>
+	      <div class="text-muted pt-3 empty text-center">
+	      	Пока что пусто...
+	      </div>
+	    </div>
+
+	</main>
+
+	<div class="aside">
+		<div class="aside-popup">
+			<div class="aside-close">
+				<img src="img/cancel.svg" alt="Закрыть">
+			</div>
+			<form class="aside-form">
+				<input type="text" name="name" placeholder="Название привычки" class="name">
+				<div class="row">
+					<div class="col-md-6">
+						<select name="color" class="select">
+							<option value="blue">Синий</option>
+							<option value="pink">Розовый</option>
+							<option value="purple">Фиолетовый</option>
+						</select>
+					</div>
+					<div class="col-md-6">
+						<input type="date" name="date" class="date">
+					</div>
+				</div>
+
+				<button name="btn" id="btn">
+					Создать
+				</button>
+			</form>
+		</div>
+	</div>
 
 </body>
 </html>
